solved issue on mainpage with text overlap

--- a/Assignment 1+2/style.css
+++ b/Assignment 1+2/style.css
@@ -57,7 +57,7 @@ nav .right a:hover {
 }
 
 .frontPageText h1 {
-    position: fixed;
+    position: absolute;
     right: 60%;
     top: 200px;
     color: whitesmoke;
